name:                scotty-heroku
version:             0.0.0.0
synopsis:            Deploying Scotty to Heroku
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scotty-heroku
  main-is:              Main.hs
  hs-source-dirs:       src
  build-depends:        scotty == 0.6.2,
                        base >=4.6 && <4.7
  default-language:     Haskell2010
